--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -27,7 +27,7 @@
     --color-secondary-600: #7c3aed;
 
     /* Warna netral */
-    --color-muted-50: #ffc0cb;
+    --color-muted-50: #fafafa;
     --color-muted-100: #f5f5f5;
     --color-muted-200: #e5e5e5;
     --color-muted-800: #262626;
